blog. permissions for editor, read_only and admin users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,8 @@ en:
     default: 'Learn and Teach'
     users:
       edit: 'Profile Edit'
+    posts:
+      index: 'Articles about foreign languages'
   profile:
     updated: 'Profile updated'
     price: 'Price Range ($ per hour)'
