--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -41,6 +41,8 @@ ru:
     default: 'Обучай и Учись'
     users:
       edit: 'Редактирование профиля'
+    posts:
+      index: 'Статьи об иностранных языках'
   profile:
     updated: 'Изменения сохранены'
     price: 'Цена ($ в час)'
