--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,6 @@
 ru:
+  ru: 'Русский'
+  en: 'Английский'
   fail_log_in: "Попытка входа в систему завершилась неудачей"
   auth_required: 'Необходима регистрация на сайте'
   email_sent: 'Ваше сообщение было отправлено на'
