--- a/config/locales/ru.posts.yml
+++ b/config/locales/ru.posts.yml
@@ -1,3 +1,10 @@
 ru:
   posts:
     header_text: "Все об иностранных языках"
+    comments:
+      title: 'Комментарии'
+      name: 'Имя'
+      text: 'Текст'
+      add: 'Добавить комментарий'
+      reply: 'Ответить'
+      write: 'Оставить комментарий'
